--- a/DonorHub/app.yaml
+++ b/DonorHub/app.yaml
@@ -2,3 +2,7 @@ runtime: python39
 entrypoint: gunicorn -b :$PORT DonorHub.wsgi
 env_variables:
     APPENGINE_URL: https://DonorHub-App.uc.r.appspot.com
+
+handlers:
+- url: /static
+  static_dir: static/
